--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -979,11 +979,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "Temporada", 800, "Static", WS_GROUP, 49, 115, 47, 8
   CONTROL "", 500, "TBitMap", 0x0000020e, 4, 3, 34, 30, 0x00000020
   CONTROL "Datos generales del artículo", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 446, 8
-<<<<<<< HEAD
-=======
   CONTROL "Ref. auxiliar", -1, "Static", WS_GROUP, 216, 261, 62, 8
-  CONTROL "Ref. auxiliar 2", -1, "Static", WS_GROUP, 216, 273, 62, 8
->>>>>>> 371df35aab8857f85cedf751bf1568643da3f0a0
+  CONTROL "Ref. secundaria", -1, "Static", WS_GROUP, 216, 273, 62, 8
   CONTROL "Lote actual", -1, "Static", WS_GROUP, 49, 193, 41, 8
   CONTROL "Lote", -1, "Button", BS_GROUPBOX, 44, 167, 164, 37
   CONTROL "Numero de serie", -1, "Button", BS_GROUPBOX, 210, 167, 170, 37
@@ -1001,11 +998,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 330, "TXBrowse", 0x00200000, 388, 91, 98, 188
   CONTROL "Código normalizado", -1, "Static", WS_GROUP, 216, 248, 62, 8
   CONTROL "Matriz", -1, "Static", WS_GROUP, 388, 42, 24, 8
-<<<<<<< HEAD
   CONTROL "Relación de codigos barras", -1, "Button", BS_GROUPBOX, 382, 67, 108, 216
-=======
-  CONTROL "Relación de codigos barras", -1, "Button", BS_GROUPBOX, 382, 67, 108, 217
->>>>>>> 371df35aab8857f85cedf751bf1568643da3f0a0
 }
 
 ART_10 DIALOG DISCARDABLE 32, 6, 496, 286
