--- a/resource/Gstimage12.rc
+++ b/resource/Gstimage12.rc
@@ -133,3 +133,5 @@ graphics-tablet_16 BITMAP "..\\bmp\\graphics-tablet_16.bmp"
 user1_64 BITMAP "..\\bmp\\user1_64.bmp"
 document_plain_user1_64 BITMAP "..\\bmp\\document_plain_user1_64.bmp"
 find_64 BITMAP "..\\bmp\\find_64.bmp"
+edit_56 BITMAP "..\\bmp\\edit_56.bmp"
+view_56 BITMAP "..\\bmp\\view_56.bmp"
