--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -11974,7 +11974,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 520, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST, 131, 61, 49, 33
   CONTROL "", 530, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 195, 61, 70, 12
   CONTROL "", 540, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 279, 61, 70, 12
-  CONTROL "", IDOK, "Button", BS_AUTOCHECKBOX, 75, 75, 10, 12
+  CONTROL "", 550, "Button", BS_AUTOCHECKBOX, 75, 75, 10, 12
   CONTROL "", 560, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 90, 75, 38, 12
   CONTROL "", 570, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST, 131, 75, 49, 33
   CONTROL "", 580, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER, 195, 75, 70, 12
