Condicion para modificar unidades por usuario

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -19467,6 +19467,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Filtrar operaciones por usuario", 350, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 156, 133, 10
   CONTROL "Realizar documentos automáticos", 360, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 168, 133, 10
   CONTROL "No abrir cajón portamonedas", 400, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 180, 107, 10
+  CONTROL "No modificar unidades", 410, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 397, 193, 107, 10
   CONTROL "", 320, "Edit", WS_BORDER|WS_TABSTOP, 104, 243, 85, 12
   CONTROL "", 321, "Edit", WS_BORDER|WS_TABSTOP, 191, 243, 185, 12
   CONTROL "", 170, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_TRACKSELECT|TVS_FULLROWSELECT|WS_BORDER, 51, 258, 325, 115
