--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -14192,17 +14192,17 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 156, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER, 31, 149, 23, 12
 }
 
-LPRODUCIDO DIALOG DISCARDABLE 144, 103, 386, 227
+LPRODUCIDO DIALOG DISCARDABLE 144, 103, 386, 240
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Materia primas"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 400, "SysTabControl32", WS_TABSTOP, 3, 2, 382, 189
-  CONTROL "&Series [F6]", 3, "Button", WS_TABSTOP, 2, 194, 50, 14
-  CONTROL "A&nterior [F7]", 4, "Button", 0x00000000, 56, 194, 50, 14
-  CONTROL "&Siguiente [F8]", 5, "Button", 0x00000000, 112, 194, 50, 14
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 279, 194, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 334, 194, 50, 14
+  CONTROL "", 400, "SysTabControl32", WS_TABSTOP, 3, 14, 382, 189
+  CONTROL "&Series [F6]", 3, "Button", WS_TABSTOP, 2, 206, 50, 14
+  CONTROL "A&nterior [F7]", 4, "Button", 0x00000000, 56, 206, 50, 14
+  CONTROL "&Siguiente [F8]", 5, "Button", 0x00000000, 112, 206, 50, 14
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 279, 206, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 334, 206, 50, 14
 }
 
 LPRODUCIDO_1 DIALOG DISCARDABLE 144, 103, 380, 171
@@ -14271,15 +14271,18 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 141, "Edit", WS_BORDER, 135, 67, 234, 12
   CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 74, 81, 60, 12
   CONTROL "", 151, "Edit", WS_BORDER, 135, 81, 234, 12
-  CONTROL "Datos", -1, "Button", BS_GROUPBOX, 2, 2, 374, 95
-  CONTROL "Grupo de familia", -1, "Static", WS_GROUP, 8, 14, 56, 8
-  CONTROL "Familia", -1, "Static", WS_GROUP, 8, 28, 27, 8
-  CONTROL "Tipo artículo", -1, "Static", WS_GROUP, 8, 42, 45, 8
-  CONTROL "Categoria", -1, "Static", WS_GROUP, 8, 56, 35, 8
-  CONTROL "Temporada", -1, "Static", WS_GROUP, 8, 70, 41, 8
-  CONTROL "Fabricante", -1, "Static", WS_GROUP, 8, 84, 39, 8
-  CONTROL "", 200, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 74, 109, 113, 95
-  CONTROL "Clasificación", -1, "Button", BS_GROUPBOX, 2, 99, 374, 27
+  CONTROL "Datos", -1, "Button", BS_GROUPBOX, 2, 2, 374, 110
+  CONTROL "Grupo de familia", 501, "Static", WS_GROUP, 8, 14, 56, 8
+  CONTROL "Familia", 502, "Static", WS_GROUP, 8, 28, 27, 8
+  CONTROL "Tipo artículo", 503, "Static", WS_GROUP, 8, 42, 45, 8
+  CONTROL "Categoria", 504, "Static", WS_GROUP, 8, 56, 35, 8
+  CONTROL "Temporada", 505, "Static", WS_GROUP, 8, 70, 41, 8
+  CONTROL "Fabricante", 506, "Static", WS_GROUP, 8, 84, 39, 8
+  CONTROL "", 200, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 74, 123, 113, 95
+  CONTROL "Clasificación", -1, "Button", BS_GROUPBOX, 2, 113, 374, 27
+  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 74, 95, 60, 12
+  CONTROL "", 161, "Edit", WS_BORDER, 135, 95, 234, 12
+  CONTROL "Operación", 507, "Static", WS_GROUP, 8, 98, 39, 8
 }
 
 LPROMO DIALOG DISCARDABLE 37, 119, 260, 59
