--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -2056,39 +2056,34 @@ FONT 8, "MS Sans Serif"
   CONTROL "Hasta", -1, "Static", WS_GROUP, 9, 49, 26, 8
 }
 
-ASSCHANGEIVA DIALOG DISCARDABLE -157, -139, 434, 271
+ASS_CONVERSION_DOCUMENTO DIALOG DISCARDABLE -157, -139, 675, 435
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Asistente para cambio de impuestos"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "Siguiente >", 500, "Button", WS_TABSTOP, 274, 254, 50, 14
-  CONTROL "Salir", 550, "Button", WS_TABSTOP, 328, 254, 50, 14
-  CONTROL "", 800, "Static", SS_BITMAP|SS_CENTERIMAGE|SS_REALSIZEIMAGE, 0, 0, 434, 34
-  CONTROL "", -1, "Static", SS_ETCHEDHORZ, 0, 32, 434, 1
-  CONTROL "Ver resultado", 600, "Button", WS_TABSTOP, 381, 254, 50, 14
-  CONTROL "", 100, "TPages", WS_TABSTOP, 0, 34, 434, 217
+  CONTROL "", 100, "TPages", WS_TABSTOP, 44, 29, 628, 384
+  CONTROL "< Anterior", 3, "Button", WS_TABSTOP, 515, 417, 50, 14
+  CONTROL "Siguiente >", IDOK, "Button", WS_TABSTOP, 569, 417, 50, 14
+  CONTROL "Cancelar", IDCANCEL, "Button", WS_TABSTOP, 622, 417, 50, 14
+  CONTROL "", 500, "TBitmap", 0x0000020e, 4, 3, 34, 30, 0x00000020
+  CONTROL "Datos generales del artículo", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 446, 8
 }
 
-ASSCHANGEIVA_1 DIALOG DISCARDABLE 99, 64, 432, 217
+ASS_CONVERSION_DOCUMENTO_2 DIALOG DISCARDABLE 99, 64, 432, 217
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "Seleccionar", 500, "Button", WS_TABSTOP, 8, 12, 57, 14
-  CONTROL "Todas", 501, "Button", WS_TABSTOP, 68, 12, 57, 14
-  CONTROL "Ninguna", 502, "Button", WS_TABSTOP, 129, 12, 57, 14
-  CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 7, 28, 418, 182
   CONTROL "Selección empresa", -1, "Button", BS_GROUPBOX, 1, 2, 428, 212
+  CONTROL "", 330, "TXBrowse", 0x00200000, 6, 14, 419, 197
 }
 
-ASSCHANGEIVA_2 DIALOG DISCARDABLE 99, 64, 432, 217
+ASS_CONVERSION_DOCUMENTO_1 DIALOG DISCARDABLE 99, 64, 627, 385
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|WS_BORDER|WS_TABSTOP|0x00200000, 5, 12, 418, 171
-  CONTROL "Información", -1, "Button", BS_GROUPBOX, 1, 2, 428, 184
-  CONTROL "", 130, "TAnimat", 0x00800000, 0, 209, 432, 8
-  CONTROL "", 120, "msctls_progress32", 0x00000000, 5, 198, 418, 6
-  CONTROL "Proceso global", -1, "Button", BS_GROUPBOX, 1, 187, 428, 19
+  CONTROL "Información", -1, "Button", BS_GROUPBOX, 1, 2, 623, 379
+  CONTROL "", 4001, "ComboBox", WS_BORDER|CBS_DROPDOWN|CBS_SORT|WS_VSCROLL|WS_TABSTOP, 76, 14, 179, 201
+  CONTROL "Tipo de documento", -1, "Static", WS_GROUP, 6, 18, 67, 8
 }
 
 ASSDOCAUTO DIALOG DISCARDABLE -157, -139, 567, 315
@@ -2119,11 +2114,11 @@ STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 2, 40, 518, 195
-  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 71, 2, 66, 12
-  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 71, 14, 66, 12
-  CONTROL "", 121, "Edit", WS_BORDER|WS_TABSTOP, 138, 14, 382, 12
-  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 71, 26, 66, 12
-  CONTROL "", 131, "Edit", WS_BORDER|WS_TABSTOP, 138, 26, 382, 12
+  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 71, 2, 66, 11
+  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 71, 14, 66, 11
+  CONTROL "", 121, "Edit", WS_BORDER|WS_TABSTOP, 138, 14, 382, 11
+  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 71, 26, 66, 11
+  CONTROL "", 131, "Edit", WS_BORDER|WS_TABSTOP, 138, 26, 382, 11
   CONTROL "Fecha documento", -1, "Static", WS_GROUP, 2, 5, 63, 8
   CONTROL "Grupo plantilla", -1, "Static", WS_GROUP, 2, 17, 50, 8
   CONTROL "Plantilla", -1, "Static", WS_GROUP, 2, 29, 29, 8
