--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -2069,20 +2069,22 @@ FONT 8, "MS Sans Serif"
   CONTROL "Datos generales del artículo", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 446, 8
 }
 
-ASS_CONVERSION_DOCUMENTO_2 DIALOG DISCARDABLE 99, 64, 432, 217
+ASS_CONVERSION_DOCUMENTO_2 DIALOG DISCARDABLE 99, 64, 626, 384
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "Selección empresa", -1, "Button", BS_GROUPBOX, 1, 2, 428, 212
-  CONTROL "", 330, "TXBrowse", 0x00200000, 6, 14, 419, 197
+  CONTROL "Seleccionar documento", -1, "Button", BS_GROUPBOX, 1, 2, 622, 380
+  CONTROL "", 120, "TXBrowse", 0x00200000, 6, 28, 613, 351
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 7, 13, 481, 12
+  CONTROL "", 110, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 490, 13, 129, 138
 }
 
-ASS_CONVERSION_DOCUMENTO_1 DIALOG DISCARDABLE 99, 64, 627, 385
+ASS_CONVERSION_DOCUMENTO_1 DIALOG DISCARDABLE 99, 64, 626, 384
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "Información", -1, "Button", BS_GROUPBOX, 1, 2, 623, 379
-  CONTROL "", 100, "ComboBox", WS_BORDER|CBS_DROPDOWN|CBS_SORT|WS_VSCROLL|WS_TABSTOP, 76, 14, 251, 359
+  CONTROL "Información", -1, "Button", BS_GROUPBOX, 1, 2, 622, 380
+  CONTROL "", 100, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 76, 14, 251, 359
   CONTROL "Tipo de documento", -1, "Static", WS_GROUP, 6, 18, 67, 8
 }
 
