nposprint y nº de serie en compras

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -7448,7 +7448,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Efectivo", 111, "Button", BS_RADIOBUTTON, 6, 41, 40, 10
   CONTROL "No efectivo", 112, "Button", BS_RADIOBUTTON, 6, 54, 73, 10
   CONTROL "Tarjeta de credito", 113, "Button", BS_RADIOBUTTON, 6, 66, 73, 10
-  CONTROL "Domiciliaciaón bancaria", 125, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 79, 88, 10
+  CONTROL "Domiciliación bancaria", 125, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 79, 88, 10
   CONTROL "", 500, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 221, 40, 42, 11
   CONTROL "", 510, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 221, 53, 42, 11
   CONTROL "", 120, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 221, 65, 42, 11
