--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -2084,7 +2084,7 @@ STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
   CONTROL "Información", -1, "Button", BS_GROUPBOX, 1, 2, 622, 380
-  CONTROL "", 100, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 76, 14, 251, 359
+  CONTROL "", 100, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 76, 14, 250, 359
   CONTROL "Tipo de documento", -1, "Static", WS_GROUP, 6, 18, 67, 8
 }
 
@@ -20834,5 +20834,21 @@ FONT 8, "MS Sans Serif"
   CONTROL "&Deseleccionar", 510, "Button", WS_TABSTOP, 59, 13, 50, 14
   CONTROL "&Todos", 520, "Button", WS_TABSTOP, 112, 13, 50, 14
   CONTROL "&Ninguno", 530, "Button", WS_TABSTOP, 165, 13, 50, 14
+  CONTROL "Documento", 110, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, 413, 14, 206, 13
+}
+
+ASS_CONVERSION_DOCUMENTO_4 DIALOG DISCARDABLE 99, 64, 626, 384
+STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "Seleccionar líneas documento", -1, "Button", BS_GROUPBOX, 1, 2, 622, 380
+  CONTROL "Documento", 100, "Static", WS_BORDER|WS_GROUP, 100, 14, 250, 13
+  CONTROL "Tipo de documento origen", -1, "Static", WS_GROUP, 7, 19, 88, 8
+  CONTROL "Documento", 110, "Static", SS_LEFTNOWORDWRAP|WS_BORDER|WS_GROUP, 100, 29, 250, 13
+  CONTROL "Número de documento", -1, "Static", WS_GROUP, 7, 34, 88, 8
+  CONTROL "", 120, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 99, 44, 250, 359
+  CONTROL "Tipo de documento", 4001, "Static", WS_GROUP, 7, 48, 67, 8
+  CONTROL "", 130, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 99, 59, 250, 359
+  CONTROL "Tipo de documento", 4004, "Static", WS_GROUP, 7, 63, 67, 8
 }
 
