--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -6915,10 +6915,10 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 131, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 102, 124, 105, 12
   CONTROL "", 142, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 253, 124, 257, 12
   CONTROL "", 210, "Edit", ES_MULTILINE|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 102, 157, 408, 62
-  CONTROL "General", 270, "Button", BS_AUTORADIOBUTTON, 535, 41, 80, 10
-  CONTROL "Unión Europea", 271, "Button", BS_AUTORADIOBUTTON, 535, 54, 80, 10
-  CONTROL "Exento", 272, "Button", BS_AUTORADIOBUTTON, 535, 67, 80, 10
-  CONTROL "Exportación", 273, "Button", BS_AUTORADIOBUTTON, 535, 80, 80, 10
+  CONTROL "General", 270, "Button", BS_AUTORADIOBUTTON, 535, 29, 80, 10
+  CONTROL "Unión Europea", 271, "Button", BS_AUTORADIOBUTTON, 535, 41, 80, 10
+  CONTROL "Exento", 272, "Button", BS_AUTORADIOBUTTON, 535, 54, 80, 10
+  CONTROL "Importación", 273, "Button", BS_AUTORADIOBUTTON, 535, 67, 80, 10
   CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 50, 244, 50, 14
   CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 50, 260, 50, 14
   CONTROL "&Impimir", 505, "Button", WS_TABSTOP, 50, 276, 50, 14
