--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -20250,6 +20250,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 260, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 257, 167, 40, 12
   CONTROL "Agrupar por clientes", 270, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 8, 192, 76, 11
   CONTROL "Facturar por cada dirección", 280, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 18, 205, 103, 11
+  CONTROL "Solo albaranes con impuestos incluidos", 294, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 6, 217, 139, 11
   CONTROL "Solo albaranes entregados", 290, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 178, 194, 100, 11
   CONTROL "Facturar por forma de pago", 291, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 178, 206, 103, 11
   CONTROL "Facturar por descuentos", 293, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 178, 217, 103, 11
