generacion de documentos

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -2083,7 +2083,7 @@ ASS_CONVERSION_DOCUMENTO_1 DIALOG DISCARDABLE 99, 64, 626, 384
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "Documento origen", -1, "Button", BS_GROUPBOX, 1, 2, 622, 75
+  CONTROL "Documento origen", -1, "Button", BS_GROUPBOX, 1, 2, 622, 90
   CONTROL "", 100, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 76, 14, 318, 359
   CONTROL "Documento origen", -1, "Static", WS_GROUP, 6, 18, 67, 8
   CONTROL "", 110, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 76, 30, 125, 134
@@ -2098,16 +2098,19 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 76, 60, 86, 12
   CONTROL "", 151, "Edit", WS_BORDER|WS_TABSTOP, 164, 60, 230, 12
   CONTROL "Proveedor", 152, "Static", WS_GROUP, 6, 64, 38, 8
-  CONTROL "Documento destino", -1, "Button", BS_GROUPBOX, 1, 80, 622, 301
-  CONTROL "", 160, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 76, 92, 318, 359
-  CONTROL "", 170, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 76, 109, 40, 12
-  CONTROL "", 180, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 76, 124, 60, 12
-  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 76, 139, 86, 12
-  CONTROL "", 191, "Edit", WS_BORDER|WS_TABSTOP, 164, 139, 230, 12
-  CONTROL "Documento destino", -1, "Static", WS_GROUP, 6, 96, 67, 8
-  CONTROL "Serie destino", -1, "Static", WS_GROUP, 6, 113, 46, 8
-  CONTROL "Fecha documento", -1, "Static", WS_GROUP, 6, 128, 63, 8
-  CONTROL "Empresa destino", 192, "Static", WS_GROUP, 6, 143, 57, 8
+  CONTROL "Documento destino", -1, "Button", BS_GROUPBOX, 1, 94, 622, 287
+  CONTROL "", 160, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 76, 107, 318, 359
+  CONTROL "", 170, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 76, 124, 40, 12
+  CONTROL "", 180, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 76, 139, 60, 12
+  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 76, 154, 86, 12
+  CONTROL "", 191, "Edit", WS_BORDER|WS_TABSTOP, 164, 154, 230, 12
+  CONTROL "Documento destino", -1, "Static", WS_GROUP, 6, 111, 67, 8
+  CONTROL "Serie destino", -1, "Static", WS_GROUP, 6, 128, 46, 8
+  CONTROL "Fecha documento", -1, "Static", WS_GROUP, 6, 143, 63, 8
+  CONTROL "Empresa destino", 192, "Static", WS_GROUP, 6, 158, 57, 8
+  CONTROL "", 200, "Edit", WS_BORDER|WS_TABSTOP, 76, 74, 86, 12
+  CONTROL "", 201, "Edit", WS_BORDER|WS_TABSTOP, 164, 74, 230, 12
+  CONTROL "Artículo", 202, "Static", WS_GROUP, 6, 78, 38, 8
 }
 
 ASSDOCAUTO DIALOG DISCARDABLE -157, -139, 567, 315
