--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -20767,6 +20767,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "BIC", -1, "Static", WS_GROUP, 219, 103, 28, 8
   CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 257, 113, 114, 11
   CONTROL "Horario", -1, "Static", WS_GROUP, 219, 116, 28, 8
+  CONTROL "", 151, "Edit", WS_BORDER|WS_TABSTOP, 257, 126, 114, 11
+  CONTROL "Entidad", -1, "Static", WS_GROUP, 219, 129, 28, 8
 }
 
 CLIENT_19 DIALOG DISCARDABLE -3, 20, 496, 263
