--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -5998,7 +5998,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Retenciones", -1, "Static", WS_GROUP, 50, 210, 50, 8
   CONTROL "Impuestos y configuración de apuntes", -1, "Button", BS_GROUPBOX, 44, 247, 388, 101
   CONTROL "Repercutido en U.E.", -1, "Static", WS_GROUP, 50, 261, 94, 8
-  CONTROL "Soportado en U.E.", -1, "Static", WS_GROUP, 50, 273, 97, 8
+  CONTROL "Repercutido extracomunitario", -1, "Static", WS_GROUP, 50, 273, 97, 8
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Enlace y cuentas de contabilidad", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 384, 8
   CONTROL "Portes", -1, "Static", WS_GROUP, 50, 222, 50, 8
@@ -6008,8 +6008,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "Series y empresa", -1, "Static", WS_GROUP, 50, 70, 59, 10
   CONTROL "", 551, "Edit", WS_BORDER, 202, 282, 225, 11
   CONTROL "", 561, "Edit", WS_BORDER, 202, 294, 225, 11
-  CONTROL "Soportado en UE", -1, "Static", WS_GROUP, 50, 285, 98, 8
-  CONTROL "IVA compra repercutido en UE", -1, "Static", WS_GROUP, 50, 297, 98, 8
+  CONTROL "Compras soportado en UE", -1, "Static", WS_GROUP, 50, 285, 98, 8
+  CONTROL "Compras repercutido en UE", -1, "Static", WS_GROUP, 50, 297, 98, 8
 }
 
 EMPRESACFG DIALOG DISCARDABLE 137, 27, 435, 429
@@ -20864,13 +20864,16 @@ ASS_CONVERSION_DOCUMENTO_3 DIALOG DISCARDABLE 99, 64, 626, 384
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
+  CONTROL "", 100, "TXBrowse", 0x00200000, 6, 44, 613, 335
+  CONTROL "", 200, "Edit", WS_BORDER|WS_TABSTOP, 60, 15, 458, 12
+  CONTROL "", 210, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 520, 15, 99, 138
+  CONTROL "&Seleccionar", 500, "Button", WS_TABSTOP, 6, 29, 50, 14
+  CONTROL "&Deseleccionar", 510, "Button", WS_TABSTOP, 59, 29, 50, 14
+  CONTROL "&Todos", 520, "Button", WS_TABSTOP, 112, 29, 50, 14
+  CONTROL "&Ninguno", 530, "Button", WS_TABSTOP, 165, 29, 50, 14
   CONTROL "Seleccionar líneas documento", -1, "Button", BS_GROUPBOX, 1, 2, 622, 380
-  CONTROL "", 100, "TXBrowse", 0x00200000, 6, 28, 613, 351
-  CONTROL "&Seleccionar", 500, "Button", WS_TABSTOP, 6, 13, 50, 14
-  CONTROL "&Deseleccionar", 510, "Button", WS_TABSTOP, 59, 13, 50, 14
-  CONTROL "&Todos", 520, "Button", WS_TABSTOP, 112, 13, 50, 14
-  CONTROL "&Ninguno", 530, "Button", WS_TABSTOP, 165, 13, 50, 14
-  CONTROL "Documento", 110, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, 413, 14, 206, 13
+  CONTROL "Documento", 110, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, 520, 30, 99, 13
+  CONTROL "Buscar por", -1, "Static", WS_GROUP, 7, 18, 40, 8
 }
 
 ASS_CONVERSION_DOCUMENTO_4 DIALOG DISCARDABLE 99, 64, 626, 384
