--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -1130,24 +1130,21 @@ STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
   CONTROL "Controlar stocks", 101, "Button", BS_AUTORADIOBUTTON, 44, 35, 64, 10
-  CONTROL "", 110, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 108, 48, 60, 11
+  CONTROL "", 110, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 108, 48, 80, 11
   CONTROL "Stock por almacenes", 300, "Button", NOT WS_VISIBLE|WS_TABSTOP, 54, 47, 75, 14
   CONTROL "", 130, "TXBrowse", 0x00200000, 54, 61, 433, 99
   CONTROL "Avisar en movimientos de almacén sin stock o bajo minimo", 127, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 54, 161, 197, 10
   CONTROL "Avisar en venta sin stock o bajo minimo", 126, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 54, 173, 137, 10
   CONTROL "Avisar en venta por número de serie sin stock", 128, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 54, 185, 159, 10
-  CONTROL "NO permitir venta sin stock", 125, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 54, 197, 100, 10
-  CONTROL "", 115, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 109, 209, 60, 11
+  CONTROL "No permitir venta sin stock", 125, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 54, 197, 100, 10
+  CONTROL "", 115, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 109, 209, 80, 11
   CONTROL "Contadores", 102, "Button", BS_AUTORADIOBUTTON|WS_GROUP|WS_TABSTOP, 44, 226, 51, 10
-  CONTROL "", 120, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 110, 237, 60, 11
-  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 204, 237, 40, 11
-  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 246, 237, 239, 11
+  CONTROL "", 120, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 110, 237, 80, 11
   CONTROL "Combustible", 170, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 54, 252, 60, 10
   CONTROL "No controlar stock", 103, "Button", BS_AUTORADIOBUTTON|WS_GROUP|WS_TABSTOP, 44, 268, 72, 10
   CONTROL "", -1, "Button", BS_GROUPBOX, 40, 29, 451, 253
   CONTROL "Stock minimo", 111, "Static", WS_GROUP, 54, 51, 42, 8
   CONTROL "Número actual", -1, "Static", WS_GROUP, 54, 240, 51, 8
-  CONTROL "Tanque", -1, "Static", WS_GROUP, 172, 240, 28, 8
   CONTROL "Stock maximo", 116, "Static", WS_GROUP, 54, 212, 50, 8
   CONTROL "", -1, "Static", SS_ETCHEDHORZ, 43, 222, 446, 1
   CONTROL "", -1, "Static", SS_ETCHEDHORZ, 43, 264, 446, 1
