varios mariscos mendez

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -15369,8 +15369,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 100, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 125, 30, 36, 11
   CONTROL "", 105, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 162, 30, 18, 11
   CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 42, 80, 11
-  CONTROL "", 111, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 54, 80, 11
-  CONTROL "", 113, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 66, 80, 11
+  CONTROL "", 111, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 100, 66, 80, 11
   CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 100, 78, 80, 11
   CONTROL "", 125, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 100, 90, 80, 11
   CONTROL "", 218, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 100, 114, 80, 186
@@ -15409,8 +15408,6 @@ FONT 8, "MS Sans Serif"
   CONTROL "0", 402, "Static", SS_RIGHT|WS_GROUP, 582, 309, 80, 8
   CONTROL "0", 404, "Static", SS_RIGHT|WS_GROUP, 582, 327, 80, 8
   CONTROL "", 408, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 91, 353, 101, 11
-  CONTROL "Incio servicio", 112, "Static", WS_GROUP, 45, 57, 51, 8
-  CONTROL "Fin servicio", 114, "Static", WS_GROUP, 45, 69, 51, 8
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Pedidos de clientes", -1, "Static", WS_GROUP, 45, 3, 120, 8
   CONTROL "Fecha", -1, "Static", WS_GROUP, 45, 45, 51, 8
@@ -15421,6 +15418,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Situación", -1, "Static", WS_GROUP, 45, 117, 51, 8
   CONTROL "", 174, "TBtnBmp", 0x00000000, 431, 28, 10, 13
   CONTROL "", 711, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 485, 336, 10, 9
+  CONTROL "Su pedido", -1, "Static", WS_GROUP, 45, 69, 34, 8
 }
 
 PEDCLI_2 DIALOG DISCARDABLE 45, 10, 670, 375
@@ -15448,7 +15446,6 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 570, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 552, 78, 102, 11
   CONTROL "", 580, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 552, 90, 102, 11
   CONTROL "", 230, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 100, 144, 410, 11
-  CONTROL "", 180, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 552, 144, 100, 11
   CONTROL "", 240, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 157, 552, 46
   CONTROL "", 250, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 100, 205, 552, 46
   CONTROL "&Añadir [F2]", 500, "Button", WS_TABSTOP, 49, 269, 50, 14
@@ -15477,7 +15474,6 @@ FONT 8, "MS Sans Serif"
   CONTROL "Diferencia", -1, "Static", WS_GROUP, 529, 357, 44, 8
   CONTROL "0", 560, "Static", SS_RIGHT|WS_GROUP, 602, 357, 50, 8
   CONTROL "Delegación", -1, "Static", WS_GROUP, 49, 56, 39, 8
-  CONTROL "Su pedido", -1, "Static", WS_GROUP, 513, 147, 34, 8
   CONTROL "Lógistica", -1, "Button", BS_GROUPBOX|WS_TABSTOP, 372, 30, 288, 102
   CONTROL "Total peso", -1, "Static", WS_GROUP, 513, 81, 38, 8
   CONTROL "TARA", -1, "Static", WS_GROUP, 513, 69, 38, 8
@@ -15488,6 +15484,10 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 115, "Edit", WS_BORDER|WS_TABSTOP, 100, 40, 72, 11
   CONTROL "", 116, "Edit", WS_BORDER, 174, 40, 184, 11
   CONTROL "Usuario", -1, "Static", WS_GROUP, 49, 43, 46, 8
+  CONTROL "", 111, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 420, 106, 70, 11
+  CONTROL "Entrada", 112, "Static", WS_GROUP, 378, 109, 31, 8
+  CONTROL "", 113, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 420, 118, 70, 11
+  CONTROL "Salida", 114, "Static", WS_GROUP, 378, 121, 30, 8
 }
 
 LANGUAGE LANG_ENGLISH,SUBLANG_ENGLISH_US
