--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -2072,7 +2072,7 @@ STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
   CONTROL "Seleccionar documento", -1, "Button", BS_GROUPBOX, 1, 2, 622, 380
-  CONTROL "", 120, "TXBrowse", 0x00200000, 6, 28, 613, 351
+  CONTROL "", 120, "TXBrowse", WS_TABSTOP|0x00300000, 6, 28, 613, 351
   CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 6, 13, 482, 12
   CONTROL "", 110, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 490, 13, 129, 138
 }
@@ -16324,14 +16324,14 @@ FONT 8, "MS Sans Serif"
   CONTROL "Estilo", -1, "Button", BS_GROUPBOX, 161, 4, 152, 77
 }
 
-PROPIEDADES DIALOG DISCARDABLE 70, 20, 388, 192
+PROPIEDADES DIALOG DISCARDABLE 70, 20, 579, 192
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Propiedades"
 FONT 8, "Helv"
 {
-  CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 4, 4, 380, 164
-  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 279, 173, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 334, 173, 50, 14
+  CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 4, 4, 573, 164
+  CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 472, 173, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 527, 173, 50, 14
   CONTROL "Total unidades", -1, "Static", WS_GROUP, 5, 179, 52, 8
   CONTROL "", 110, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 60, 175, 71, 12
 }
@@ -20866,7 +20866,7 @@ ASS_CONVERSION_DOCUMENTO_3 DIALOG DISCARDABLE 99, 64, 626, 384
 STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "TXBrowse", 0x00200000, 6, 44, 613, 335
+  CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 6, 44, 613, 335
   CONTROL "", 200, "Edit", WS_BORDER|WS_TABSTOP, 60, 15, 458, 12
   CONTROL "", 210, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 520, 15, 99, 138
   CONTROL "&Seleccionar", 500, "Button", WS_TABSTOP, 6, 29, 50, 14
@@ -20875,6 +20875,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "&Ninguno", 530, "Button", WS_TABSTOP, 165, 29, 50, 14
   CONTROL "Seleccionar líneas documento", -1, "Button", BS_GROUPBOX, 1, 2, 622, 380
   CONTROL "Buscar por", -1, "Static", WS_GROUP, 7, 18, 40, 8
+  CONTROL "&Propiedades", 540, "Button", WS_TABSTOP, 569, 29, 50, 14
 }
 
 ASS_CONVERSION_DOCUMENTO_4 DIALOG DISCARDABLE 99, 64, 626, 384
